--- a/client/index.html
+++ b/client/index.html
@@ -9,15 +9,14 @@
 
 <body>
 	<div id="header">
-		<h1>API Project: Request Header Parser Microservice</h1>
+		<h1>API Project: URL Shortener Microservice</h1>
 	</div>
 
 	<div id="main">
 		<div>
-			<h2>API Project: URL Shortener Microservice</h2>
 			<h3>User Story: </h3>
 			<ol>
-				<li>I can POST a URL to <code>[project_url]/api/shorturl/new</code> and I will receive a shortened URL in the JSON response.<br>Example : <code>{"original_url":"www.google.com","short_url":1}</code></li>
+				<li>I can POST a URL to <code><span class = "hostURL"></span>/api/shorturl/new</code> and I will receive a shortened URL in the JSON response.<br>Example : <code>{"original_url":"www.google.com","short_url":1}</code></li>
 				<li>If I pass an invalid URL that doesn't follow the <code>http(s)://www.example.com(/more/routes)</code> format, the JSON response will contain an error like <code>{"error":"invalid URL"}</code><br> HINT: to be sure that the submitted url points to a valid site you can use the function <code>dns.lookup(host, cb)</code> from the <code>dns</code> core module.</li>
 				<li>When I visit the shortened URL, it will redirect me to my original link.</li>
 			</ol>
